--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "author": "Scott Morin <scott@journeyedu.co>",
     "license": "MIT",
     "dependencies": {
+        "dark-sky-api": "^0.6.32",
+        "darkskyjs": "^0.3.0",
+        "node-fetch": "^2.6.0",
         "nodemon": "^2.0.2",
-        "request": "^2.88.2"
+        "opencage-api-client": "^0.5.1",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.5"
     }
 }
